SERVER-34919 do not retry vector insert on write conflict exception, for read concern snapshot

(cherry picked from commit 3312ff09502ceb92d93f65f92d4e823df993a927)